replaced openAi client to openrouter client

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -178,6 +178,9 @@
     <div id="models-tab" class="settings-tab active">
       <div class="mb-4">
         <h4 class="font-medium mb-2">Select Models (max 5)</h4>
+        <div class="mb-2">
+          <input type="text" id="model-search" placeholder="Search models..." class="w-full p-2 border rounded">
+        </div>
         <div id="model-selection" class="space-y-2 max-h-60 overflow-y-auto">
           <!-- Available models will be loaded here -->
         </div>
